--- a/_includes/post-list-item.html
+++ b/_includes/post-list-item.html
@@ -18,7 +18,7 @@
     <a href="{{ include.post.url }}">
       <h2>{{ include.post.title }}</h2>
     </a>
-    <h4>{{ include.post.excerpt }}</h4>
+    <h4>{{ include.post.excerpt | strip_html }}</h4>
     {%- if include.event.end -%}
     <h4>Updated {{ include.post.modified | date: "%b %d, %Y" }}</h4>
     {%- endif -%}
